# spacelift-migration-kit

./: .devcontainer.json  .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  config.json  config.yml.example  exporter.tfc.example.tfvars  justfile  manager-stack.example.tfvars  migration-kit  migration-kit.py  noxfile.py  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  vcs_config.csv
.claude/: settings.json
.claude/skills/git-commit/: SKILL.md
.claude/skills/python-package-management/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
commands/: __init__.py  audit.py  clean.py  config.py  export.py  generate.py  import_.py  migrate.py  upload_state_files.py
custom/: README.md
custom/commands/: update_vcs_config.py
custom/templates/: base.tf.jinja
data/smk-docker/: .terraformrc  Dockerfile  README.md
data/terraform-agent/: Dockerfile  README.md  terraform-pre-plan
data/terraform-push/: Dockerfile  entrypoint.sh  main.tf
exporters/: __init__.py  base.py  terraform.py
exporters/tfc/: .terraform.lock.hcl  main.tf  main.tftpl  variables.tf
generator/: generator.tftpl  main.tf  variables.tf
manager-stack/: .terraform.lock.hcl  main.tf  variables.tf
migration/: README.md  config.yaml  exporter-tfvars.tpl  go.mod  go.sum  main.go  manager-tfvars.tpl
python/: config.json  index.py  steps.txt
python-bak/: index.py
python-bak/exporters/: __init__.py
python/exporters/: interface.py  terraform_cloud.py
python/tfc-agent/: Dockerfile
spacemk/: __init__.py  __main__.py  cli.py  code_publisher.py  generator.py  importer.py  spacelift.py  state_uploader.py
spacemk/commands/: __init__.py  audit.py  clean.py  config.py  create_module_versions.py  export.py  generate.py  import_.py  import_state_files_to_spacelift.py  migrate.py  set_env_vars.py  set_sensitive_env_vars.py  set_tf_vars_with_invalid_name.py  update_vcs_config.py  upload_state_files.py
spacemk/exporters/: __init__.py  base.py  terraform.py
spacemk/templates/: base.tf.jinja  macros.tf.jinja  main.tf.jinja
src/smk/: __init__.py
src/smk/core/: __init__.py  cli.py
tests/: __init__.py  cli_spacemk_test.py  conftest.py  test_cli.py  test_exporter_terraform.py  version_test.py
tests/exporters/terraform/: test_terraform.py  test_terraform_exporter.py
tests/exporters/terraform/bootstrap/: main.tf  providers.tf  variables.tf
tests/exporters/terraform/bootstrap/modules/organization/: .terraform.lock.hcl  agent_pools.tf  main.tf  organization.tf  policies.tf  policy_sets.tf  projects.tf  registry_modules.tf  teams.tf  variable_sets.tf  variables.tf  workspaces.tf
tests/exporters/terraform/cassettes/test_terraform_exporter/: test_list_agent_pools.yaml  test_list_organization.yaml  test_list_policies.yaml  test_tfe_list_policy_sets.yaml  test_tfe_list_projects.yaml  test_tfe_list_registry_modules.yaml  test_tfe_list_registry_providers.yaml  test_tfe_list_tasks.yaml  test_tfe_list_teams.yaml  test_tfe_list_variable_sets.yaml  test_tfe_list_variables.yaml  test_tfe_list_workspaces.yaml
