[tool.poetry]
authors = ["Spacelift <contact@spacelift.io>"]
description = "Spacelift Migration Kit"
license = "MIT"
name = "spacemk"
readme = "README.md"
version = "2.0.0-dev"

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.7"
click-help-colors = "^0.9.4"
clickloader = "0.2.0"
envyaml = "1.10.211231"
icecream = "2.1.3"
jinja2 = "3.1.4"
pydash = "8.0.1"
python-benedict = "0.33.2"
python-dotenv = "1.0.1"
python-git-info = "^0.8.3"
python-on-whales = "0.71.0"
python-slugify = "8.0.4"
pyyaml = "6.0.1"
requests = "2.32.2"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
semver = "^3.0.2"
xlsxwriter = "3.2.0"

[tool.poetry.group.dev.dependencies]
coverage = { extras = ["toml"], version = "^7.5.1" }
mypy = "^1.10.0"
nox = "^2024.4.15"
nox-poetry = "^1.0.3"
pytest = "^8.3.1"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pytest-mock = "^3.14.0"
pytest-recording = "0.13.1"
ruff = "^0.4.4"
vcrpy = "6.0.1"

[tool.poetry.scripts]
spacemk = "spacemk.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spacelift-io/spacelift-migration-kit/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.codespell]
skip = "poetry.lock"

[tool.coverage.paths]
source = ["spacemk"]

[tool.coverage.run]
branch = true
source = ["spacemk"]

[tool.coverage.report]
# KLUDGE: Disabling this until we get to 100% coverage
# fail_under = 100
show_missing = true

[tool.pytest.ini_options]
addopts = "--block-network --cov=spacemk --durations=10 --durations-min=1.0 --record-mode=none --strict-markers"

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
ignore = [
  "TRY003", # KLUDGE: Ignored until we refactor the exceptions to use custom exceptions
]
select = [
  "A",    # flake8-builtins
  "ARG",  #flake8-unused-arguments
  "B",    # flake8-bugbear
  "E",    # pycodestyle
  "ERA",  # eradicate
  "F",    # Pyflakes
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "N",    # pep8-naming
  "PLR",  # Pylint
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PL",   # Pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "TCH",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
]
task-tags = ["KLUDGE", "TODO"]

[tool.ruff.lint.per-file-ignores]
"spacemk/exporters/terraform.py" = [
  "ERA001",
] # KLUDGE: Ignored until we re-enable support for Variable Sets
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7 # KLUDGE: We should refactor the code and remove this at some point
