[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.26,<0.10" ]

[project]
name = "smk"
version = "3.0.0-dev"
description = "Spacelift Migration Kit"
readme = "README.md"
authors = [ { name = "Spacelift", email = "contact@spacelift.io" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "pluggy>=1.6", "typer>=0.21.1" ]

scripts.smk = "smk.core.cli:app"

[dependency-groups]
dev = [
  "mdformat>=1",
  "pre-commit>=4.5.1",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.14.14",
  "ty>=0.0.13",
]

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [  ]
lint.per-file-ignores."tests/**/*.py" = [
  "S101", # assert is allowed in tests
]
lint.isort.known-first-party = [ "smk" ]

[tool.pyproject-fmt]
column_width = 120
max_supported_python = "3.14"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "--strict-markers"

[tool.coverage.run]
source = [ "src/smk" ]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.deadcode]
exclude = [ "tests" ]
